--- a/Bass_FIN/index.html
+++ b/Bass_FIN/index.html
@@ -91,7 +91,7 @@
                     <div class="card-body">
                          <div class="subtitle">MERCHANDISE</div>
                          <div class="title">Clothing</div>
-                         <div class="description">Wearable branding for companies</div>
+                         <div class="description">Wearable branding for different companies</div>
                     </div>
                </div>
           </a>
